--- a/config.yaml
+++ b/config.yaml
@@ -30,3 +30,5 @@ params:
           url: "https://genomic.social/@somet3000"
         - name: "twitter"
           url: "https://twitter.com/somet3000"
+        - name: "cv"
+          url: "karthik_guruvayurappan_cv.pdf"
